--- a/config/scaffolding/Test731Project.yml
+++ b/config/scaffolding/Test731Project.yml
@@ -7,3 +7,8 @@ packages:
   gitUrl: https://github.com/deemashlayer/Test731Project
   gitUsername: deemashlayer
   gitBranch: main
+- name: DepDemoPackage
+  gitServerName: dima
+  gitUrl: https://github.com/deemashlayer
+  gitUsername: deemashlayer
+  gitBranch: master
